@@ -1,1 +1,2 @@
-java -client -Xms32m -Xrs -XX:+UseTLAB -Xverify:none -noclassgc -Xshare:on -Djava.util.logging.config.class=kkckkc.jsourcepad.BootstrapLogger -classpath "@CLASSPATH@" kkckkc.jsourcepad.Bootstrap %1
+cd %~dp0
+javaw -client -Xms32m -Xrs -XX:+UseTLAB -Xverify:none -noclassgc -Xshare:on -DexecutableName=jsourcepad.bat -Djava.util.logging.config.class=kkckkc.jsourcepad.BootstrapLogger -classpath "@CLASSPATH@" kkckkc.jsourcepad.Bootstrap %1
