@@ -12,5 +12,6 @@
         <opt>-Dlaunch4j.exedir="%EXEDIR%"</opt>
         <opt>-Dlaunch4j.exefile="%EXEFILE%"</opt>
         <opt>-Djava.util.logging.config.class=kkckkc.jsourcepad.BootstrapLogger</opt>
+        <opt>-DexecutableName=jsourcepad.exe</opt>
     </jre>
 </launch4jConfig>
